# vj-program

./: .gitignore  CMakeLists.txt  README.md  note_checker  note_checker.cpp
data/: clips.csv
src/: main.cpp
src/core/: Application.cpp  Application.h
src/display/: DisplayManager.cpp  DisplayManager.h
src/midi/: MidiHandler.cpp  MidiHandler.h
src/utils/: CsvParser.cpp  CsvParser.h
src/video/: VideoClip.cpp  VideoClip.h  VideoPlayer.cpp  VideoPlayer.h
